<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E3F6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/HDT_logo"
        android:scaleType="fitStart"
        android:src="@drawable/hdt_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hdt2"
            android:contentDescription="@string/main_picture"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/about"
        android:textColor="#8D327D"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graphics"
                android:textColor="#8D327D"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="#8D327D"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training"
                android:textColor="#8D327D"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branding"
                android:textColor="#8D327D"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autocad"
                android:textColor="#8D327D"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#8D327D"
        android:orientation="horizontal"
        android:paddingTop="3dp">


        <ImageView
            android:id="@+id/address_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/address_icon"
            android:layout_toRightOf="@id/address_icon"
            android:text="@string/address"
            android:textColor="#F3E3F6"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/telephone_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/telephone_icon"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/telephone_icon"
            android:layout_toRightOf="@id/telephone_icon"
            android:autoLink="phone"
            android:text="@string/telephone"
            android:textColor="#F3E3F6"
            android:textSize="13sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#F3E3F6"
        android:orientation="horizontal"
        android:paddingTop="3dp">


        <ImageView
            android:id="@+id/site_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/site_icon"
            android:layout_toRightOf="@id/site_icon"
            android:autoLink="web"
            android:text="@string/contact"
            android:textColor="#8D327D"
            android:textSize="13sp" />


        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/time_icon"
            android:src="@drawable/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/time_icon"
            android:layout_toRightOf="@id/time_icon"
            android:text="@string/open"
            android:textColor="#8D327D"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>